crates/tui/tests/storybook/snapshots/app_tool::edit_file_rejected_without_speculative_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* edit_file src/lib.rs                                                     14:37:03
  read_file must be called before edit_file

* edit_file src/blocked.rs                                                 14:37:03










─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
