crates/tui/tests/storybook/snapshots/app_tool::edit_file_success_uses_output_metadata_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 542
expression: frame.text()
---
* edit_file src/lib.rs
   1 - old
   1 + new







─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
