crates/tui/tests/storybook/snapshots/app_tool::edit_file_success_uses_output_metadata_diff.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 543
expression: frame.styles_text()
---
dim: 84 14
  0   0   1 fg=AnsiValue(77)
  0   1  10 attrs=dim
  1   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
  1   2   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
  1   5   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
  1   7   3 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 110, g: 35, b: 35 }
  1  10  73 bg=Rgb { r: 60, g: 20, b: 20 }
  2   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
  2   2   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
  2   5   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
  2   7   3 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 35, g: 95, b: 35 }
  2  10  73 bg=Rgb { r: 20, g: 50, b: 20 }
 10   0   1 fg=AnsiValue(237)
 10   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 10   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 10   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 10   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 10   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 10   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 10   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 10   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 10   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 10  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 10  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 10  13  71 fg=AnsiValue(237)
 11   1   1 fg=Black bg=White
 12   0  84 fg=AnsiValue(237)
 13   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 13  10  66 bg=AnsiValue(233)
 13  76   8 fg=AnsiValue(244) bg=AnsiValue(233)
