crates/tui/tests/storybook/snapshots/app_tool::edit_file_tool_block_error.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
* edit_file src/lib.rs
  old_string not found in src/lib.rs




─ ✿ working… ─────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ○ normal                                                     1:1 100%
