crates/tui/tests/storybook/snapshots/app_tool::edit_file_tool_block_error.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 10
  0   0   1 fg=AnsiValue(9)
  0   1  11 attrs=dim
  1   2  34 fg=AnsiValue(9)
  6   0  67 fg=AnsiValue(237)
  6  67   1 fg=AnsiValue(244)
  6  69   1 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  70 fg=AnsiValue(237)
  9   0  70 bg=AnsiValue(233)
