crates/tui/tests/storybook/snapshots/app_tool::edit_file_tool_block_with_diff_gutter.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
⏺ edit_file src/lib.rs
   1 - fn add(a: i32, b: i32) -> i32 {
   2 -     a + b
   1 + fn add(a: i64, b: i64) -> i64 {
   2 +     a.checked_add(b).expect("overflow")







─ ✿ working… ────────────────────────────────────────────────────────────────  ─

────────────────────────────────────────────────────────────────────────────────
