crates/tui/tests/storybook/snapshots/app_tool::edit_file_tool_block_with_metadata_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* edit_file runtime/lua/smelt/plugins/compact.lua
   2 - Use them as evidence for task priority and return instructions.
   2 + Use them as evidence for task priority and return/resume instructions.



─ ✿ working… ───────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                               1:1 100%
