crates/tui/tests/storybook/snapshots/app_tool::edit_file_tool_block_with_metadata_summary.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 10
  0   0   1 fg=AnsiValue(77)
  0   1  10 attrs=dim
  1   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
  1   2   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
  1   5   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
  1   7  21 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  28   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  31  15 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  46   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  49   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  50   6 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  56  14 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  70   9 bg=Rgb { r: 60, g: 20, b: 20 }
  2   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
  2   2   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
  2   5   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
  2   7  21 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  2  28   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 20, g: 50, b: 20 }
  2  31  15 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  2  46   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 20, g: 50, b: 20 }
  2  49   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  2  50   7 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 20, g: 50, b: 20 }
  2  57  20 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  2  77   2 bg=Rgb { r: 20, g: 50, b: 20 }
  6   0   1 fg=AnsiValue(237)
  6   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
  6   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
  6  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
  6  13  67 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  80 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  62 bg=AnsiValue(233)
  9  72   8 fg=AnsiValue(244) bg=AnsiValue(233)
